--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Zenmart</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="public/css/command.css" />
@@ -100,6 +102,45 @@
               <span>Hot Deals</span>
               <span>Best Sellers</span>
               <span>New Arrival</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="home_page">
+      <div class="header_frame">
+        <div class="container">
+          <div class="header_left">
+            <div class="header_content">
+              <div>Special Offer</div>
+              <span>Immersive Entertainment</span>
+              <p>Discover our new items. Up to 25% Off !</p>
+              <a href="">Shop Now</a>
+              <img src="public/images/header_img.svg" alt="" />
+            </div>
+          </div>
+          <div class="header_right">
+            <div class="header_box">
+              <div class="box_left">
+                <span>Starting from $899</span>
+                <p>Health Care Monitor</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
+              </div>
+              <div class="box_rigth">
+                <img src="public/images/smart_watch.svg" alt="" />
+              </div>
+            </div>
+            <div class="header_box">
+              <div class="box_left">
+                <span>Starting from $899</span>
+                <p>Health Care Monitor</p>
+                <a href="">Shop Now</a>
+                <div class="hover_border"></div>
+              </div>
+              <div class="box_rigth">
+                <img src="public/images/smart_watch.svg" alt="" />
+              </div>
             </div>
           </div>
         </div>
