--- a/index.html
+++ b/index.html
@@ -223,6 +223,167 @@
           </div>
         </div>
       </div>
+      <div class="selling_product_frame">
+        <div class="container">
+          <div class="category_top">
+            <span>Top Selling Products</span>
+            <a href="">View All</a>
+          </div>
+          <div class="product_wrapper">
+            <div class="next_prev_box">
+              <img src="public/images/next.svg" alt="" />
+            </div>
+            <div class="product_boxes">
+              <!--1-->
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_img_box"
+                    style="
+                      background: url(public/images/watch.png);
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Cart</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">Samsung</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Shure SRH440 Professional Studio Headphones
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <span>3.014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <!--2-->
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_img_box"
+                    style="
+                      background: url(public/images/phone.png);
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Cart</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">SONY</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Apple iPhone 11 64GB Smartphone - Black.
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <span>3.014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <!--3-->
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_img_box"
+                    style="
+                      background: url(public/images/iRobot.png);
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Cart</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">SONY</span>
+                  <a href="">
+                    <p class="product_desc">
+                      iRobot Roomba i3+ EVO Wi-Fi Connected Self-Empty Robot.
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <span>3.014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <!--4-->
+              <div class="product_box">
+                <a href="">
+                  <div
+                    class="product_img_box"
+                    style="
+                      background: url(public/images/dyson.png);
+                      background-size: cover;
+                    "
+                  >
+                    <div class="hover_box">
+                      <button>Add to Cart</button>
+                    </div>
+                  </div>
+                </a>
+                <div class="product_content_box">
+                  <span class="product_title">Eastsport</span>
+                  <a href="">
+                    <p class="product_desc">
+                      Dyson V7 Complete Cordless Stick Vacuum - Iron/Blue
+                    </p>
+                  </a>
+                  <div class="review_box">
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <img src="public/images/review.svg" alt="" />
+                    <span>3.014 reviews</span>
+                  </div>
+                  <div class="price_box">
+                    <strong>32$</strong>
+                    <span>$45</span>
+                  </div>
+                </div>
+              </div>
+              <div class="next_prev_box" style="transform: scaleX(-1)">
+                <img src="public/images/next.svg" alt="" />
+              </div>
+            </div>
+          </div>
+      
     </div>
   </body>
 </html>
