feat refactor top selling product view

--- a/index.html
+++ b/index.html
@@ -383,7 +383,23 @@
               </div>
             </div>
           </div>
+      <div class="pagination_box">
+        <div class="pagination_main">
+          <img src="public/images/arrow-prev_next.svg" alt="">
+          <div class="pagination_dot">
+            <div class="dot">
+              <div></div>
+            </div> <div class="dot active">
+              <div></div>
+            </div> <div class="dot">
+              <div></div>
+            </div><div class="dot">
+              
+          </div>
+          <img src="public/images/arrow-prev_next.svg" alt="" style="transform: scaleX(-1);">
       
+        </div>
+      </div>
     </div>
   </body>
 </html>
