feat completed adv section view

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
             <span>Top Selling Products</span>
             <a href="">View All</a>
           </div>
+          
           <div class="product_wrapper">
             <div class="next_prev_box">
               <img src="public/images/next.svg" alt="" />
@@ -400,6 +401,8 @@
       
         </div>
       </div>
+    </div><div class="adv_frame">
+      Members get free shipping* with no order minimum!*Restrictions apply.Try free 30-day trial
     </div>
   </body>
 </html>
