--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
           </div>
           <div class="nav_top_menu">
-            <a href="">
+            <a href="./order/cart.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <img src="public/images//images/icons/heart 1.png" alt="" />
@@ -56,7 +56,7 @@
                 </div>
               </div>
             </a>
-            <a href="">
+            <a href="./order/cart.html">
               <div class="top_menu_box">
                 <div class="box_icon_box">
                   <img src="public/images/images/icons/profile 1.png" alt="" />
@@ -95,16 +95,16 @@
                 <a href="">Home</a>
               </div>
               <div class="router_menu">
-                <a href="" class="active">Shop</a>
+                <a href="./product/all.html" class="active">Shop</a>
               </div>
               <div class="router_menu">
-                <a href="">Pages</a>
+                <a href="./order/cart.html">Orders</a>
               </div>
               <div class="router_menu">
-                <a href="">Blog</a>
+                <a href="./other/about.html">About</a>
               </div>
               <div class="router_menu">
-                <a href="">Contact</a>
+                <a href="./other/contact.html">Contact</a>
               </div>
             </div>
             <div class="sorting_menu">
@@ -126,7 +126,7 @@
               <span>Immersive Entertainment</span>
 
               <p>Discover our new items. Up to 25% Off !</p>
-              <a href="">Shop Now</a>
+              <a href="./product/chosenProduct.html">Shop Now</a>
               <img src="public/images/images/icons/header_img.svg" alt="" />
             </div>
           </div>
@@ -135,7 +135,7 @@
               <div class="box_left">
                 <span> Starting from $899.</span>
                 <p>Health Care Monitor</p>
-                <a href=""> Shop Now</a>
+                <a href="./product/all.html"> Shop Now</a>
                 <div class="hover_border"></div>
               </div>
               <div class="box_right">
@@ -192,7 +192,7 @@
         <div class="container">
           <div class="category_top">
             <span>Shop by Category</span>
-            <a href="">View all C ategories</a>
+            <a href="./product/all.html">View all C ategories</a>
           </div>
           <div class="category_wrapper">
             <div class="category_box">
@@ -239,7 +239,7 @@
         <div class="container">
           <div class="category_top">
             <span>Top Selling Product</span>
-            <a href="">View all C ategories</a>
+            <a href="./product/all.html">View all C ategories</a>
           </div>
           <div class="product_wrapper">
             <div class="next_prev_box">
@@ -262,7 +262,7 @@
                 </a>
                 <div class="product_content_box">
                   <span class="product_title">SAMSUNG</span>
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <p class="product_desc">
                       Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
                     </p>
@@ -282,7 +282,7 @@
                 </div>
               </div>
               <div class="product_box">
-                <a href="">
+                <a href="./product/chosenProduct.html">
                   <div
                     class="product_img_box"
                     style="
@@ -297,7 +297,7 @@
                 </a>
                 <div class="product_content_box">
                   <span class="product_title">SAMSUNG</span>
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <p class="product_desc">
                       Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
                     </p>
@@ -441,7 +441,7 @@
         <div class="container">
           <div class="category_top">
             <span>headphone</span>
-            <a href="">View all</a>
+            <a href="./product/all.html">View all</a>
           </div>
 
           <div class="spec_product_wrapper">
@@ -449,7 +449,7 @@
               <div class="big_product_content">
                 <span>Now in moon gray</span>
                 <p>Beats Studio Buds</p>
-                <a href="">Shop Now</a>
+                <a href="./product/chosenProduct.html">Shop Now</a>
                 <div class="hover_border"></div>
               </div>
               <img
@@ -518,7 +518,7 @@
             <div class="tv_product_boxes">
               <div class="tv_product_box">
                 <div class="product_img">
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <img
                       src="public/images/images/products/samsung_tv.png"
                       alt=""
@@ -527,7 +527,7 @@
                 </div>
                 <div class="product_content_box">
                   <span class="product_title">SAMSUNG</span>
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <p class="product_desc">
                       Apple Watch SE (GPS) 40mm Space Grey Aluminum Case with
                     </p>
@@ -548,13 +548,13 @@
               </div>
               <div class="tv_product_box">
                 <div class="product_img">
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <img src="public/images/images/products/tcl.png" alt="" />
                   </a>
                 </div>
                 <div class="product_content_box">
                   <span class="product_title">SAMSUNG</span>
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <p class="product_desc">
                       TCL 3-Series 40" 1080p HD LED Android Smart TV (40S334-CA)
                     </p>
@@ -575,7 +575,7 @@
               </div>
               <div class="tv_product_box">
                 <div class="product_img">
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <img
                       src="public/images/images/products/LG-OLED.png"
                       alt=""
@@ -584,7 +584,7 @@
                 </div>
                 <div class="product_content_box">
                   <span class="product_title">SAMSUNG</span>
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <p class="product_desc">
                       LG 65" 4K UHD HDR LED webOS Smart TV
                     </p>
@@ -746,7 +746,7 @@
             <div class="event_product_boxes">
               <div class="event_product_box">
                 <div class="event_product_img">
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <img
                       src="public/images/images/products/sony_notebook.png"
                       alt=""
@@ -776,7 +776,7 @@
               </div>
               <div class="event_product_box">
                 <div class="event_product_img">
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <img
                       src="public/images/images/products/sony_playstation.png"
                       alt=""
@@ -785,7 +785,7 @@
                 </div>
                 <div class="product_content_box" style="padding: 0 0 0 10px">
                   <span class="product_title">SONY</span>
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <p class="product_desc">
                       Sony PlayStation 5 Video Game Console
                     </p>
@@ -806,7 +806,7 @@
               </div>
               <div class="event_product_box">
                 <div class="event_product_img">
-                  <a href="">
+                  <a href="./product/chosenProduct.html">
                     <img
                       src="public/images/images/products/apple_watch.png"
                       alt=""
@@ -815,7 +815,7 @@
                 </div>
                 <div class="product_content_box" style="padding: 0 0 0 10px">
                   <span class="product_title">EASTSPORT</span>
-                  <a href="">
+                  <a href="./product/all.html">
                     <p class="product_desc">
                       Apple Watch Series 3 GPS Space Gray - 38mm - Black
                     </p>
@@ -876,116 +876,117 @@
         </div>
       </div>
 
-      <div class="footer_frame">
-        <div class="container">
-          <div class="footer_top">
-            <div class="footer_contact_box">
-              <span class="footer_spec_title">Contact Us</span>
-              <div class="footer_contact_main">
-                <img src="public/images/images/icons/phone-call.svg" alt="" />
-                <div>
-                  <strong>Monday-Friday: 08am-9pm</strong>
-                  <span>+(1) 123 456 7890</span>
-                </div>
-              </div>
-              <div class="footer_contact_main">
-                <img src="public/images/images/icons/email.svg" alt="" />
-                <div>
-                  <strong>Need help with your order?</strong>
-                  <span>support@zenmart.com</span>
-                </div>
+      
+    </div>
+    <div class="footer_frame">
+      <div class="container">
+        <div class="footer_top">
+          <div class="footer_contact_box">
+            <span class="footer_spec_title">Contact Us</span>
+            <div class="footer_contact_main">
+              <img src="public/images/images/icons/phone-call.svg" alt="" />
+              <div>
+                <strong>Monday-Friday: 08am-9pm</strong>
+                <span>+(1) 123 456 7890</span>
               </div>
             </div>
-            <div class="footer_support_box">
-              <span class="footer_spec_title" style="margin-bottom: 10px"
-                >Customer Support</span
-              >
-              <a href="">Contact Us </a>
-              <a href=""> Help Centre</a>
-              <a href="">Returns & Exchanges</a>
-              <a href="">Best Buy Financing</a>
-              <a href="">Best Buy Gift Card</a>
-            </div>
-            <div class="footer_support_box">
-              <span class="footer_spec_title" style="margin-bottom: 10px"
-                >Services</span
-              >
-              <a href="">Geek Squad </a>
-              <a href="">In-Home Advisor</a>
-              <a href="">Trade-In Program</a>
-              <a href=""> Electronics Recycling</a>
-              <a href="">Best Buy Health</a>
-            </div>
-            <div class="footer_media_box">
-              <div class="footer_media_main">
-                <span class="footer_spec_title" style="margin-bottom: 20px"
-                  >Follow us</span
-                >
-                <div class="media_box">
-                  <i class="fa-brands fa-facebook"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-instagram"></i>
-                  <i class="fa-brands fa-linkedin-in"></i>
-                </div>
-              </div>
-              <div class="footer_media_main" style="margin-top: 30px">
-                <span class="footer_spec_title" style="margin-bottom: 20px"
-                  >Mobile</span
-                >
-                <div class="mobile_app_box">
-                  <img src="public/images/images/icons/apple_icon.png" alt="" />
-                  <span>iOS App</span>
-                </div>
-                <div class="mobile_app_box">
-                  <img
-                    src="public/images/images/icons/android_icon.png"
-                    alt=""
-                  />
-                  <span>Android App</span>
-                </div>
-              </div>
-              <div class="footer_media_box"></div>
-            </div>
-            <div class="footer_media_box">
-              <div class="footer_media_main" style="margin-top: 130px">
-                <span class="footer_spec_title" style="margin-bottom: 20px"
-                  >We accept</span
-                >
-                <div class="card_box">
-                  <img src="public/images/images/icons/visa.png" alt="" />
-                  <img
-                    src="public/images/images/icons/master_card.png"
-                    alt=""
-                  />
-                  <img src="public/images/images/icons/apple_pay.png" alt="" />
-                  <img src="public/images/images/icons/dicvover.png" alt="" />
-                  <img src="public/images/images/icons/paypal.png" alt="" />
-                  <img src="public/images/images/icons/amex.png" alt="" />
-                </div>
+            <div class="footer_contact_main">
+              <img src="public/images/images/icons/email.svg" alt="" />
+              <div>
+                <strong>Need help with your order?</strong>
+                <span>support@zenmart.com</span>
               </div>
             </div>
           </div>
-          <div class="footer_bottom">
-            <div class="footer_main">
-              <div class="footer_bottom_left">
-                <span>© 2022 Zenmart. All Rights Reserved</span>
-                <span>Privacy · Terms · Sitemap</span>
+          <div class="footer_support_box">
+            <span class="footer_spec_title" style="margin-bottom: 10px"
+              >Customer Support</span
+            >
+            <a href="">Contact Us </a>
+            <a href=""> Help Centre</a>
+            <a href="">Returns & Exchanges</a>
+            <a href="">Best Buy Financing</a>
+            <a href="">Best Buy Gift Card</a>
+          </div>
+          <div class="footer_support_box">
+            <span class="footer_spec_title" style="margin-bottom: 10px"
+              >Services</span
+            >
+            <a href="">Geek Squad </a>
+            <a href="">In-Home Advisor</a>
+            <a href="">Trade-In Program</a>
+            <a href=""> Electronics Recycling</a>
+            <a href="">Best Buy Health</a>
+          </div>
+          <div class="footer_media_box">
+            <div class="footer_media_main">
+              <span class="footer_spec_title" style="margin-bottom: 20px"
+                >Follow us</span
+              >
+              <div class="media_box">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
               </div>
-              <div class="footer_bottom_right">
-                <div class="footer_select_box">
-                  <span>Currency</span>
-                  <select name="" id="">
-                    <option value="">USD</option>
-                    <option value="">UZS</option>
-                  </select>
-                </div>
-                <div class="footer_select_box">
-                  <span>Language</span>
-                  <select name="" id="">
-                    <option value="">English</option>
-                    <option value="">Uzbek</option>
-                  </select>
-                </div>
+            </div>
+            <div class="footer_media_main" style="margin-top: 30px">
+              <span class="footer_spec_title" style="margin-bottom: 20px"
+                >Mobile</span
+              >
+              <div class="mobile_app_box">
+                <img src="public/images/images/icons/apple_icon.png" alt="" />
+                <span>iOS App</span>
+              </div>
+              <div class="mobile_app_box">
+                <img
+                  src="public/images/images/icons/android_icon.png"
+                  alt=""
+                />
+                <span>Android App</span>
+              </div>
+            </div>
+            <div class="footer_media_box"></div>
+          </div>
+          <div class="footer_media_box">
+            <div class="footer_media_main" style="margin-top: 130px">
+              <span class="footer_spec_title" style="margin-bottom: 20px"
+                >We accept</span
+              >
+              <div class="card_box">
+                <img src="public/images/images/icons/visa.png" alt="" />
+                <img
+                  src="public/images/images/icons/master_card.png"
+                  alt=""
+                />
+                <img src="public/images/images/icons/apple_pay.png" alt="" />
+                <img src="public/images/images/icons/dicvover.png" alt="" />
+                <img src="public/images/images/icons/paypal.png" alt="" />
+                <img src="public/images/images/icons/amex.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="footer_bottom">
+          <div class="footer_main">
+            <div class="footer_bottom_left">
+              <span>© 2022 Zenmart. All Rights Reserved</span>
+              <span>Privacy · Terms · Sitemap</span>
+            </div>
+            <div class="footer_bottom_right">
+              <div class="footer_select_box">
+                <span>Currency</span>
+                <select name="" id="">
+                  <option value="">USD</option>
+                  <option value="">UZS</option>
+                </select>
+              </div>
+              <div class="footer_select_box">
+                <span>Language</span>
+                <select name="" id="">
+                  <option value="">English</option>
+                  <option value="">Uzbek</option>
+                </select>
               </div>
             </div>
           </div>
