feat completed product all page

--- a/product/all.html
+++ b/product/all.html
@@ -17,7 +17,8 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="../public/css/command.css" />
-    <link rel="stylesheet" href="../public/css/product_all_css/" />
+    <link rel="stylesheet" href="../public/css/product_all.css" />
+
     <title>Zenmart</title>
   </head>
   <body>
@@ -152,7 +153,7 @@
             <div class="product_pagination_box">
               <div class="product_pagination_main">
                 <img
-                  src="../public/image/images/icons/arrow-prev_next.svg"
+                  src="../public/images/images/icons/arrow-prev_next.svg"
                   alt=""
                 />
                 <div class="pagination_dot">
@@ -173,7 +174,7 @@
                   </div>
                 </div>
                 <img
-                  src="../public/image/images/icons/arrow-prev_next.svg"
+                  src="../public/images/images/icons/arrow-prev_next.svg"
                   style="transform: scaleX(-1)"
                   alt=""
                 />
@@ -404,7 +405,7 @@
                   <img src="../public/images/images/icons/review.svg" alt="" />
                   <img src="../public/images/images/icons/review.svg" alt="" />
                   <img src="../public/images/images/icons/review.svg" alt="" />
-                  <img src="../public/imagess/images/icons/review.svg" alt="" />
+                  <img src="../public/images/images/icons/review.svg" alt="" />
                   <span>3.014 reviews</span>
                 </div>
                 <div class="price_box">
@@ -526,7 +527,7 @@
                   </p>
                 </a>
                 <div class="review_box">
-                  <img src="../public/image/images/icons/review.svg" alt="" />
+                  <img src="../public/images/images/icons/review.svg" alt="" />
                   <img src="../public/images/images/icons/review.svg" alt="" />
                   <img src="../public/images/images/icons/review.svg" alt="" />
                   <img src="../public/images/images/icons/review.svg" alt="" />
@@ -1013,6 +1014,7 @@
         </div>
       </div>
     </div>
+
     <div class="footer_frame">
       <div class="container">
         <div class="footer_top">
